[gd_scene load_steps=8 format=2]

[ext_resource path="res://network2/Lobby.gd" type="Script" id=1]
[ext_resource path="res://addons/LANServerBroadcast/server_advertiser/ServerAdvertiser.gd" type="Script" id=2]
[ext_resource path="res://SecondaryWeaponGroup.tres" type="ButtonGroup" id=3]
[ext_resource path="res://ClassChoice.tres" type="ButtonGroup" id=4]
[ext_resource path="res://PrimaryWeaponGroup.tres" type="ButtonGroup" id=5]
[ext_resource path="res://network2/Class-Weapons.gd" type="Script" id=6]
[ext_resource path="res://network2/ColorOption.gd" type="Script" id=7]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
advertiserPath = NodePath("ServerAdvertiser")

[node name="PlayerList" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.5
margin_top = -241.0
margin_right = 252.5
margin_bottom = 241.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.0
margin_top = 48.0
margin_right = 76.0
margin_bottom = 105.0
text = "Player List:"
align = 1
valign = 1

[node name="ServerAdvertiser" type="Node" parent="."]
script = ExtResource( 2 )

[node name="StartGame" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -139.0
margin_top = -118.0
margin_right = 139.0
margin_bottom = -37.0
text = "Start Game"

[node name="PlayerLoadout" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="weapon1" type="Label" parent="PlayerLoadout"]
margin_left = 609.0
margin_top = 551.0
margin_right = 805.0
margin_bottom = 592.0
text = "Rifle"
align = 1
valign = 1
autowrap = true

[node name="weapon2" type="Label" parent="PlayerLoadout"]
margin_left = 610.0
margin_top = 594.0
margin_right = 806.0
margin_bottom = 635.0
text = "Shotgun"
align = 1
valign = 1
autowrap = true

[node name="weaponbut1" type="Button" parent="PlayerLoadout"]
margin_left = 608.0
margin_top = 556.0
margin_right = 638.0
margin_bottom = 586.0
toggle_mode = true
pressed = true
group = ExtResource( 5 )

[node name="class1" type="Label" parent="PlayerLoadout"]
margin_left = 159.0
margin_top = 483.0
margin_right = 355.0
margin_bottom = 524.0
text = "Light"
align = 1
valign = 1
autowrap = true

[node name="classbut1" type="Button" parent="PlayerLoadout"]
margin_left = 158.0
margin_top = 488.0
margin_right = 188.0
margin_bottom = 518.0
toggle_mode = true
pressed = true
group = ExtResource( 4 )

[node name="class2" type="Label" parent="PlayerLoadout"]
margin_left = 159.0
margin_top = 537.0
margin_right = 355.0
margin_bottom = 578.0
text = "Medium"
align = 1
valign = 1
autowrap = true

[node name="classbut2" type="Button" parent="PlayerLoadout"]
margin_left = 158.0
margin_top = 542.0
margin_right = 188.0
margin_bottom = 572.0
toggle_mode = true
group = ExtResource( 4 )

[node name="class3" type="Label" parent="PlayerLoadout"]
margin_left = 159.0
margin_top = 587.0
margin_right = 355.0
margin_bottom = 628.0
text = "Heavy"
align = 1
valign = 1
autowrap = true

[node name="classbut3" type="Button" parent="PlayerLoadout"]
margin_left = 158.0
margin_top = 592.0
margin_right = 188.0
margin_bottom = 622.0
toggle_mode = true
group = ExtResource( 4 )

[node name="weaponbut2" type="Button" parent="PlayerLoadout"]
margin_left = 608.0
margin_top = 598.0
margin_right = 638.0
margin_bottom = 628.0
toggle_mode = true
group = ExtResource( 5 )

[node name="Sweapon1" type="Label" parent="PlayerLoadout"]
margin_left = 820.0
margin_top = 553.0
margin_right = 1016.0
margin_bottom = 594.0
rect_pivot_offset = Vector2( -684, -122 )
text = "Pistol"
align = 1
valign = 1
autowrap = true

[node name="Sweapon2" type="Label" parent="PlayerLoadout"]
margin_left = 821.0
margin_top = 596.0
margin_right = 1017.0
margin_bottom = 637.0
text = "Revolver"
align = 1
valign = 1
autowrap = true

[node name="Sweaponbut1" type="Button" parent="PlayerLoadout"]
margin_left = 819.0
margin_top = 558.0
margin_right = 849.0
margin_bottom = 588.0
toggle_mode = true
pressed = true
group = ExtResource( 3 )

[node name="Sweaponbut2" type="Button" parent="PlayerLoadout"]
margin_left = 819.0
margin_top = 600.0
margin_right = 849.0
margin_bottom = 630.0
toggle_mode = true
group = ExtResource( 3 )

[node name="OptionButton" type="OptionButton" parent="PlayerLoadout"]
margin_left = 1075.0
margin_top = 515.0
margin_right = 1259.0
margin_bottom = 560.0
text = "Color"
script = ExtResource( 7 )

[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="PlayerLoadout/weaponbut1" to="PlayerLoadout" method="_on_weaponbut1_pressed"]
[connection signal="pressed" from="PlayerLoadout/classbut1" to="PlayerLoadout" method="_on_classbut1_pressed"]
[connection signal="pressed" from="PlayerLoadout/classbut2" to="PlayerLoadout" method="_on_classbut2_pressed"]
[connection signal="pressed" from="PlayerLoadout/classbut3" to="PlayerLoadout" method="_on_classbut3_pressed"]
[connection signal="pressed" from="PlayerLoadout/weaponbut2" to="PlayerLoadout" method="_on_weaponbut2_pressed"]
[connection signal="pressed" from="PlayerLoadout/Sweaponbut1" to="PlayerLoadout" method="_on_Sweaponbut1_pressed"]
[connection signal="pressed" from="PlayerLoadout/Sweaponbut2" to="PlayerLoadout" method="_on_Sweaponbut2_pressed"]
